infrastructure/kubernetes/analytics-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: swiftpay
spec:
  replicas: 1

  selector:
    matchLabels:
      app: analytics-service

  template:
    metadata:
      labels:
        app: analytics-service

    spec:
      containers:
        - name: analytics-service
          image: swiftpay/analytics-service:latest

          ports:
            - containerPort: 8082
