infrastructure/kubernetes/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: swiftpay
spec:
  replicas: 2

  selector:
    matchLabels:
      app: gateway-service

  template:
    metadata:
      labels:
        app: gateway-service

    spec:
      containers:
        - name: gateway-service
          image: swiftpay/gateway-service:latest

          ports:
            - containerPort: 8080
