infrastructure/kubernetes/kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: swiftpay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.7.0
          ports:
            - containerPort: 9092
            - containerPort: 29093
