infrastructure/kubernetes/ledger-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-service
  namespace: swiftpay
spec:
  replicas: 2

  selector:
    matchLabels:
      app: ledger-service

  template:
    metadata:
      labels:
        app: ledger-service

    spec:
      containers:
        - name: ledger-service
          image: swiftpay/ledger-service:latest

          ports:
            - containerPort: 8081
