infrastructure/kubernetes/analytics-service.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: swiftpay
spec:
  selector:
    app: analytics-service

  ports:
    - port: 8082
      targetPort: 8082

  type: ClusterIP
