infrastructure/kubernetes/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: swiftpay
spec:
  selector:
    app: gateway-service

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
