infrastructure/kubernetes/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: swiftpay
spec:
  selector:
    app: kafka

  ports:
    - name: kafka
      port: 9092
      targetPort: 9092

    - name: controller
      port: 29093
      targetPort: 29093

  type: ClusterIP
