infrastructure/kubernetes/ledger-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ledger-service
  namespace: swiftpay
spec:
  selector:
    app: ledger-service

  ports:
    - port: 8081
      targetPort: 8081

  type: ClusterIP
