infrastructure/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiftpay-ingress
  namespace: swiftpay

spec:
  ingressClassName: nginx

  rules:
    - host: swiftpay.local

      http:
        paths:

          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080

          - path: /ledger
            pathType: Prefix
            backend:
              service:
                name: ledger-service
                port:
                  number: 8081

          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8082
